@@ -43,6 +43,9 @@ detailed below.
 - The `kudu-pbc-dump` tool has been removed. The same functionality is now
   implemented as `kudu pbc dump`.
 
+- KuduSession methods in the C++ library are no longer advertised as thread-safe
+  to have one set of semantics for both C++ and Java Kudu client libraries.
+
 [[rn_0.10.0]]
 == Release notes specific to 0.10.0
 
